@@ -8,6 +8,7 @@ import io
 from beancount.core import compare
 from beancount.core import data
 from beancount.core import interpolate
+from beancount.core import getters
 from beancount.parser import printer
 
 
@@ -53,18 +54,13 @@ def render_entry_context(entries, options_map, entry):
     print("Hash:{}".format(compare.hash_entry(entry)), file=oss)
     print("Location: {}:{}".format(meta["filename"], meta["lineno"]), file=oss)
 
-    # Get the entry's accounts and accumulate the balances of these accounts up
-    # to the entry.
-    balance_before, balance_after = interpolate.compute_entry_context(entries,
-                                                                      entry)
-
     # Get the list of accounts sorted by the order in which they appear in the
     # closest entry.
-    accounts = sorted(balance_before.keys())
-    if isinstance(entry, data.Transaction):
-        ordering = {posting.account: index
-                    for (index, posting) in enumerate(entry.postings)}
-        accounts = sorted(accounts, key=ordering.get)
+    accounts = getters.get_entry_accounts(entry)
+
+    # Accumulate the balances of these accounts up to the entry.
+    balance_before, balance_after = interpolate.compute_entry_context(entries,
+                                                                      entry)
 
     # Create a format line for printing the contents of account balances.
     max_account_width = max(map(len, accounts)) if accounts else 1
